# mini-solver

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md
.circleci/: config.yml
cmake/: clang-format.cmake  cppcheck.cmake  doxygen.cmake
sources/: macro.h  main.cpp  solver.h  solverOnemax.h
sources/optimizationAlgorithm/: firstImprovement.h  optimizationAlgorithm.h
sources/problem/: evalOneMax.h  evaluation.h
sources/solution/: solution.h  solutionArray.h
tests/: test_solutionArray.cpp  tests.h
tests-globals/: solver.py
unitTesting/: main.cpp
